--- a/.github/workflows/wheelie.yml
+++ b/.github/workflows/wheelie.yml
@@ -16,43 +16,50 @@ jobs:
           - os: ubuntu
             distrover: bionic
             arch: amd64
-            rust_arch: x86_64-unknown-linux-gnu
           - os: ubuntu
             distrover: bionic
             arch: arm32v7
-            rust_arch: armv7-unknown-linux-gnueabihf
           - os: ubuntu
             distrover: bionic
             arch: arm64v8
-            rust_arch: aarch64-unknown-linux-gnu
           - os: ubuntu
             distrover: focal
             arch: amd64
-            rust_arch: x86_64-unknown-linux-gnu
           - os: ubuntu
             distrover: focal
             arch: arm32v7
-            rust_arch: armv7-unknown-linux-gnueabihf
           - os: ubuntu
             distrover: focal
             arch: arm64v8
-            rust_arch: aarch64-unknown-linux-gnu
           - os: alpine
             distrover: "3.13"
             arch: amd64
-            rust_arch: x86_64-unknown-linux-gnu
           - os: alpine
             distrover: "3.13"
             arch: arm32v7
-            rust_arch: armv7-unknown-linux-gnueabihf
           - os: alpine
             distrover: "3.13"
             arch: arm64v8
-            rust_arch: aarch64-unknown-linux-gnu
 
     steps:
       - name: Check out repo
         uses: actions/checkout@v2
+
+      # https://github.com/crazy-max/ghaction-docker-buildx/issues/172
+      - name: Hack Docker FS to Build cryptography on armv6/armv7
+        run: |
+          df -h
+          sudo swapon --show
+          sudo dd if=/dev/zero of=/swapfile1 bs=1M count=6K 
+          sudo chmod 600 /swapfile1
+          sudo mkswap /swapfile1
+          sudo swapon /swapfile1
+          sudo swapon --show
+          sudo free -h
+          sudo systemctl stop docker
+          sudo mount -t tmpfs -o size=9G tmpfs /var/lib/docker
+          df -h
+          sudo systemctl start docker
 
       - name: Set up qemu
         run: |
@@ -74,7 +81,7 @@ jobs:
 
       - name: Build wheels in image
         run: |
-          docker build -t ${{ matrix.os }}-${{ matrix.distrover }}-${{ matrix.arch }} --build-arg DISTRO=${{ matrix.os }} --build-arg DISTROVER=${{ matrix.distrover }} --build-arg ARCH=${{ matrix.arch }} --build-arg RUST_ARCH=${{ matrix.rust_arch }} .
+          docker build -t ${{ matrix.os }}-${{ matrix.distrover }}-${{ matrix.arch }} --build-arg DISTRO=${{ matrix.os }} --build-arg DISTROVER=${{ matrix.distrover }} --build-arg ARCH=${{ matrix.arch }} .
           docker create --name ${{ matrix.os }}-${{ matrix.distrover }}-${{ matrix.arch }} ${{ matrix.os }}-${{ matrix.distrover }}-${{ matrix.arch }}
           mkdir -p build
           docker cp ${{ matrix.os }}-${{ matrix.distrover }}-${{ matrix.arch }}:/build build
