--- a/.github/workflows/wheelie.yml
+++ b/.github/workflows/wheelie.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build_wheels:
-    name: ${{ matrix.os }}-${{ matrix.arch }}
+    name: ${{ matrix.os }}-${{ matrix.distrover }}-${{ matrix.arch }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
