--- a/.github/workflows/wheelie.yml
+++ b/.github/workflows/wheelie.yml
@@ -110,11 +110,12 @@ jobs:
 
       - name: Upload artifacts
         run: |
-          for distro in $(ls -d *-artifacts); do
-            for wheel in $(ls ${distro}/build/); do
+          for artifactfolder in $(ls -d *-artifacts); do
+            distro=$(echo ${artifactfolder} | sed 's|-artifact||')
+            for wheel in $(ls ${artifactfolder}/build/); do
               if ! grep "${wheel}" "docs/${distro}/index.html"; then
                 echo "**** ${wheel} for ${distro} is being uploaded to aws ****"
-                aws s3 cp ${distro}/build/${wheel} s3://wheels.linuxserver.io/${distro}/${wheel} --acl public-read
+                aws s3 cp ${artifactfolder}/build/${wheel} s3://wheels.linuxserver.io/${distro}/${wheel} --acl public-read
                 sed -i "s|</body>|    <a href='https://wheels.linuxserver.io/${distro}/${wheel}'>${wheel}</a>\n    <br />\n\n</body>|" "docs/${distro}/index.html"
               else
                 echo "**** ${wheel} for ${distro} already processed, skipping ****"
