--- a/.github/workflows/wheelie_scheduler.yml
+++ b/.github/workflows/wheelie_scheduler.yml
@@ -19,7 +19,7 @@ jobs:
           for PACKAGE in ${ALLPACKAGES}; do
             VERSION=$(curl -sL "https://pypi.python.org/pypi/${PACKAGE}/json" | jq -r '. | .info.version')
             for DISTRO in $(ls -d */); do
-              if ! grep "${PACKAGE}-${VERSION}" "${DISTRO}index.html"; then
+              if ! grep -q "${PACKAGE}-${VERSION}" "${DISTRO}index.html"; then
                 echo "**** Adding ${PACKAGE}-${VERSION} to build list ****"
                 PACKAGES="${PACKAGES} ${PACKAGE}"
                 break
