--- a/.github/workflows/wheelie_scheduler.yml
+++ b/.github/workflows/wheelie_scheduler.yml
@@ -17,8 +17,21 @@ jobs:
           ALLPACKAGES="cryptography lxml numpy"
           cd docs
           for PACKAGE in ${ALLPACKAGES}; do
-            VERSION=$(curl -sL "https://pypi.python.org/pypi/${PACKAGE}/json" | jq -r '. | .info.version')
             for DISTRO in $(ls -d */); do
+              IMAGE=$(echo ${DISTRO} | awk -F'-' '{print $1}')
+              echo "**** IMAGE is ${IMAGE} ****"
+              TAG=$(echo ${DISTRO} | awk -F'-' '{print $2}')
+              echo "**** TAG is ${TAG} ****"
+              docker run -d --rm --name test ghcr.io/linuxserver/baseimage-${IMAGE}:${TAG}
+              docker exec test bash -c "\
+                if [ -f /usr/bin/apt ]; then \
+                  apt-get update && apt-get install -y python3-pip; \
+                else \
+                  apk add --no-cache py3-pip; \
+                fi && \
+                pip3 install -U pip"
+              VERSION=$(docker exec test bash -c "pip install ${PACKAGE}== 2>&1 | sed -rn 's|^.*versions:(.*)\).*$|\1|p' | awk -F',' '{print \$(NF)}' | sed 's|^ ||'")
+              docker stop test
               if ! grep -q "${PACKAGE}-${VERSION}" "${DISTRO}index.html"; then
                 echo "**** Adding ${PACKAGE}-${VERSION} to build list ****"
                 PACKAGES="${PACKAGE}==${VERSION} ${PACKAGES}"
