--- a/.github/workflows/wheelie_scheduler.yml
+++ b/.github/workflows/wheelie_scheduler.yml
@@ -34,7 +34,7 @@ jobs:
               docker stop test
               if ! grep -q "${PACKAGE}-${VERSION}" "${DISTRO}index.html"; then
                 echo "**** Adding ${PACKAGE}-${VERSION} to build list ****"
-                PACKAGES="${PACKAGE}==${VERSION} ${PACKAGES}"
+                PACKAGES="${PACKAGE} ${PACKAGES}"
                 break
               else
                 echo "**** ${PACKAGE}-${VERSION} is already in ${DISTRO}, skipping ****"
