--- a/.github/workflows/wheelie_scheduler.yml
+++ b/.github/workflows/wheelie_scheduler.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Check for updates and trigger
         run: |
-          ALLPACKAGES="cryptography lxml numpy"
+          ALLPACKAGES="apprise cryptography lxml numpy"
           cd docs
           for DISTRO in $(ls -d */); do
             IMAGE=$(echo ${DISTRO} | awk -F'-' '{print $1}')
