--- a/.github/workflows/wheelie.yml
+++ b/.github/workflows/wheelie.yml
@@ -115,7 +115,7 @@ jobs:
           for artifactfolder in $(ls -d *-artifacts); do
             distro=$(echo ${artifactfolder} | sed 's|-artifacts||')
             for wheel in $(ls ${artifactfolder}/build/); do
-              if ! grep "${wheel}" "docs/${distro}/index.html"; then
+              if ! grep -q "${wheel}" "docs/${distro}/index.html" && ! echo "${wheel}" | grep -q "none-any"; then
                 echo "**** ${wheel} for ${distro} is being uploaded to aws ****"
                 aws s3 cp ${artifactfolder}/build/${wheel} s3://wheels.linuxserver.io/${distro}/${wheel} --acl public-read
                 sed -i "s|</body>|    <a href='https://wheels.linuxserver.io/${distro}/${wheel}'>${wheel}</a>\n    <br />\n\n</body>|" "docs/${distro}/index.html"
