--- a/.github/workflows/wheelie.yml
+++ b/.github/workflows/wheelie.yml
@@ -69,8 +69,8 @@ jobs:
 
       - name: Build wheels in image
         run: |
-          DISTRO=$(echo ${{ matrix.os }} | | awk -F'-' '{print $1}')
-          DISTROVER=$(echo ${{ matrix.os }} | | awk -F'-' '{print $2}')
+          DISTRO=$(echo ${{ matrix.os }} | awk -F'-' '{print $1}')
+          DISTROVER=$(echo ${{ matrix.os }} | awk -F'-' '{print $2}')
           docker build -t ${{ matrix.os }}-${{ matrix.arch }} --build-arg DISTRO=${DISTRO} --build-arg DISTROVER=${DISTROVER} --build-arg ARCH=${{ matrix.arch }} --build-arg PACKAGES="${{ github.event.inputs.PACKAGES }}" .
           docker create --name ${{ matrix.os }}-${{ matrix.arch }} ${{ matrix.os }}-${{ matrix.arch }}
           mkdir -p build
