--- a/.github/workflows/wheelie_scheduler.yml
+++ b/.github/workflows/wheelie_scheduler.yml
@@ -32,7 +32,7 @@ jobs:
             for DISTRO in ${DISTROS}; do
               IMAGE=$(echo ${DISTRO} | awk -F'-' '{print $1}')
               TAG=$(echo ${DISTRO} | awk -F'-' '{print $2}')
-              VERSION=$(docker exec ${IMAGE}-${TAG} bash -c "pip install ${PACKAGE}== 2>&1 | sed -rn 's|^.*versions:(.*)\).*$|\1|p' | awk -F',' '{print \$(NF)}' | sed 's|^ ||'")
+              VERSION=$(docker exec ${IMAGE}-${TAG} bash -c "pip install ${PACKAGE}== 2>&1 | sed -rn 's|^.*versions:(.*)\).*$|\1|p' | sed 's%[0-9.]*\(a\|b\|rc\|dev\)[0-9]*%%g' | sed 's%,%%g' | awk '{print \$(NF)}'")
               CPYTHON=$(docker exec ${IMAGE}-${TAG} bash -c "printf \"\$(python3 -V)\" | awk '{print \$2}' | awk 'BEGIN{FS=OFS=\".\"} NF--' | sed 's|\.||g' | sed 's|^|cp|g'")
               if ! grep -q "${PACKAGE}-${VERSION}-${CPYTHON}" "docs/${IMAGE}/index.html"; then
                 echo "**** Adding ${PACKAGE}-${VERSION} to build list ****"
