enable pushing HA wheels

--- a/.github/workflows/wheelie_HA.yml
+++ b/.github/workflows/wheelie_HA.yml
@@ -56,6 +56,7 @@ jobs:
           docker create --name ${{ matrix.arch }} ${{ matrix.arch }}
           mkdir -p build
           docker cp ${{ matrix.arch }}:/build build
+          rm -rf build/*none-any.whl
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
@@ -90,15 +91,15 @@ jobs:
           for wheel in $(ls ${os}/); do
             if ! grep -q "${wheel}" "docs/${os}/index.html" && ! echo "${wheel}" | grep -q "none-any"; then
               echo "**** ${wheel} for ${os} is being uploaded to aws ****"
-              #aws s3 cp ${os}/${wheel} s3://wheels.linuxserver.io/${os}/${wheel} --acl public-read
+              aws s3 cp ${os}/${wheel} s3://wheels.linuxserver.io/${os}/${wheel} --acl public-read
               sed -i "s|</body>|    <a href='https://wheels.linuxserver.io/${os}/${wheel}'>${wheel}</a>\n    <br />\n\n</body>|" "docs/${os}/index.html"
             else
               echo "**** ${wheel} for ${os} already processed, skipping ****"
             fi
           done
           rm -rf *-artifacts ubuntu alpine
-          #git config --local user.email "ci@linuxserver.io"
-          #git config --local user.name "LinuxServer-CI"
-          #git add . || :
-          #git commit -m '[bot] Updating indices' || :
-          #git push || :
+          git config --local user.email "ci@linuxserver.io"
+          git config --local user.name "LinuxServer-CI"
+          git add . || :
+          git commit -m '[bot] Updating indices' || :
+          git push || :
