--- a/Dockerfile.homeassistant
+++ b/Dockerfile.homeassistant
@@ -70,9 +70,8 @@ RUN \
   mkdir -p /build && \
   cd /tmp/core && \
   pip wheel --wheel-dir=/build --find-links="https://wheel-index.linuxserver.io/alpine/" --find-links="https://wheel-index.linuxserver.io/homeassistant/" --no-cache-dir \
-    grpcio==1.31.0
-  #  homeassistant==${HASS_RELEASE} && \
-  #pip wheel --wheel-dir=/build --find-links="https://wheel-index.linuxserver.io/alpine/" --find-links="https://wheel-index.linuxserver.io/homeassistant/" --no-cache-dir \
-  #  -r requirements_all.txt && \
-  #pip wheel --wheel-dir=/build --find-links="https://wheel-index.linuxserver.io/alpine/" --find-links="https://wheel-index.linuxserver.io/homeassistant/" --no-cache-dir \
-  #  -r https://raw.githubusercontent.com/home-assistant/docker/${HASS_BASE}/requirements.txt
+    homeassistant==${HASS_RELEASE} && \
+  pip wheel --wheel-dir=/build --find-links="https://wheel-index.linuxserver.io/alpine/" --find-links="https://wheel-index.linuxserver.io/homeassistant/" --no-cache-dir \
+    -r requirements_all.txt && \
+  pip wheel --wheel-dir=/build --find-links="https://wheel-index.linuxserver.io/alpine/" --find-links="https://wheel-index.linuxserver.io/homeassistant/" --no-cache-dir \
+    -r https://raw.githubusercontent.com/home-assistant/docker/${HASS_BASE}/requirements.txt
